[package]
name = "stepstone"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
common-meta = { git = "https://github.com/GreptimeTeam/greptimedb.git", branch = "main" }
common-macro = { git = "https://github.com/GreptimeTeam/greptimedb.git", branch = "main" }
common-error = { git = "https://github.com/GreptimeTeam/greptimedb.git", branch = "main" }
tokio = { version = "1.47", features = ["full"] }
snafu = "0.8"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql"] }
opendal = { version = "0.50", features = ["services-s3", "services-oss", "services-azblob", "services-gcs"] }
uuid = { version = "1.0", features = ["v4"] }
colored = "2.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"